--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>1.0.0-beta-4589</kotlin.version>
+        <kotlin.version>1.0.0-rc-1036</kotlin.version>
         <spring-boot.version>1.3.2.RELEASE</spring-boot.version>
     </properties>
 
